--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -11,8 +11,14 @@
 .HeaderContent{
     text-align: center;
     padding-top: 10vh;
-    height: 60%;
 }
+
+@media (max-width: 1366px) {
+    .HeaderContent{
+        padding-top: 7.5vh;
+    }
+}
+
 .HeaderContent h1{
     color: whitesmoke;
     font-size: 2.5em;
