--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ p{
 }
 .timeline .line{
   background: linear-gradient(to bottom, rgba(240,77,78,1) 0%,rgba(236,240,241,1) 100%);
-  height: 225px;
+  height: 475px;
   width: 3px;
   margin: 0 auto;
   position: relative;
